<resources>
    <string name="app_name">Happylists</string>
    <string name="action_search">Search</string>

    <string name="Spiski">Списки</string>
    <string name="spisok">Список </string>
    <string name="btSS">+ Новый список</string>
    <string name="sozd">Создать</string>

    <string name="Titl">Удаление</string>
    <string name="delete_record">Вы уверены, что хотите удалить список?</string>
    <string name="delete_prod">Вы уверены, что хотите удалить продукт со списка?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>

    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>

    <string name="etName">Название списка</string>
    <string name="etOpis">Описание</string>
    <string name="tvType">Тип списка:</string>
    <string name="rbP">Покупки</string>
    <string name="rbZ">Задачи</string>
    <string name="cbStoim">Стоимость</string>
    <string name="cbPrice">Цена</string>
    <string name="cbPricends">Цена БЕЗ НДС</string>
    <string name="etnds">НДС %</string>
    <string name="cbValuta">Валюта</string>
    <string name="cbKolvo">Количество</string>
    <string name="cbNapom">Напоминание</string>
    <string name="cbSin">Добавить к синхронизации</string>

    <string name="it01">Синхронизировать</string>
    <string name="it02">Горячая синхронизация</string>
    <string name="it03">Оценить приложение</string>
    <string name="it04">Аккаунт</string>
    <string name="it05">Инфо</string>
    <string name="it06">Настройка</string>
    <string name="it07">Справочники</string>

    <string name="it11">Синхронизировать список</string>
    <string name="it12">Отправить как СМС</string>
    <string name="it13">Отправить по E-mail</string>
    <string name="it14">Настройки списка</string>

    <string name="add_prod">введите продукт</string>
    <string name="add_opis">описание продукта</string>
    <string name="Add">Добавить</string>
    <string name="etCount">кол-во</string>
    <string name="acPE">ед-ца</string>
    <string name="etPrice">цена</string>
    <string name="chbvagno">важно</string>
    <string name="tvItogtxt">Итого в корзине:</string>
    <string name="Del">Удалить</string>
    <string name="Sav">Сохранить</string>

    <string name="tvColor">Выберите цветовую тематику:</string>
    <string name="rbColorN">Ночь</string>
    <string name="rbColorD">День</string>
    <string name="cbEkr">Не выключать экран</string>

    <string name="toa_PN">Введите продукт!</string>
    <string name="toa_Name">Введите, пожалуйста, название списка!</string>
    <string name="toa_nds">НДС не может быть пустым или нулевым.</string>
    <string name="toa_Count">Введите количество продукта!</string>
    <string name="toa_PE">Введите единицу продукта!</string>
    <string name="toa_Price">Введите цену продукта!</string>
    <string name="toa_Zero">Количество и цена должны быть больше нуля</string>

    <string name="dictionary">Справочники</string>
    <string name="tvDicKateg">Категории</string>
    <string name="tvDicProduct">Товары</string>
    <string name="tvDicEdin">Единицы</string>
    <string name="tvDicValut">Валюта</string>
    <string name="tvDicOpis">Описания товаров</string>
    <string name="dickateg">Справочник категорий</string>
    <string name="textkateg">Редактирование категории: </string>
    <string name="addkateg">Введите название категории!</string>
    <string name="textk1">Название не может быть пустым</string>
    <string name="textk2">Вся продукция данной категории перенесена в категорию Временная!</string>
    <string name="textk3">Нельзя удалить данную категорию! Можно только переименовать.</string>
    <string name="dicprod">Справочник продукции</string>
    <string name="etBPN">введите продукцию</string>
    <string name="spBPK">введите категорию</string>
    <string name="spBPE">введите единицу</string>
    <string name="dicprodopis">Справочник описания продукта</string>
    <string name="textprodopis">Редактирование описания продукта: </string>
    <string name="addpo">Введите описание продукта!</string>
    <string name="addprod">Введите название продукции!</string>
    <string name="textprod">Редактирование продукта: </string>
    <string name="dicedin">Справочник единиц</string>
    <string name="textedin">Редактирование единицы: </string>
    <string name="addedin">Введите название единицы!</string>
    <string name="texte1">Все данные единицы в справочнике продукции переименованы как ШТ!</string>
    <string name="texte2">Нельзя удалить данную единицу! Можно только переименовать.</string>
    <string name="dicopis">Справочник описаний продукта</string>
    <string name="spDVN">введите валюту</string>
    <string name="spDVAbv">введите аббревиатуру</string>
    <string name="addvn">Введите название валюты!</string>
    <string name="addabv">Введите аббревиатуру!</string>
    <string name="textv1">Название валюты не может быть пустым</string>
    <string name="textv2">Валюта</string>
    <string name="textv3">вал</string>
    <string name="textv4">Нельзя удалить данную валюту, так как она используется в списках покупок!</string>
    <string name="textv5">Нельзя удалить последнюю валюту!</string>

    <string name="acBK">введите категорию</string>
    <string name="btnAbk">Сохранить</string>
    <string name="btnDbk">Удалить</string>
    <string name="del_data">Вы уверены, что хотите удалить данную категорию?</string>
    <string name="del_prod">Вы уверены, что хотите удалить данную продукцию?</string>
    <string name="del_edin">Вы уверены, что хотите удалить данную единицу?</string>
    <string name="del_val">Вы уверены, что хотите удалить данную валюту?</string>
    <string name="del_opis">Вы уверены, что хотите удалить данное описание продукта?</string>

</resources>
