<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/action_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/it01"
            android:icon="@drawable/arrows"
            android:title="@string/it01" />
        <item
            android:id="@+id/it02"
            android:icon="@drawable/arrows"
            android:title="@string/it02" />
        <item
            android:id="@+id/it03"
            android:icon="@drawable/star"
            android:title="@string/it03" />
    </group>

    <item  android:title="">
        <menu>
        <item
            android:id="@+id/it04"
            android:icon="@drawable/men"
            android:title="@string/it04" />
        <item
            android:id="@+id/it05"
            android:icon="@drawable/info25"
            android:title="@string/it05" />
        <item
            android:id="@+id/it06"
            android:icon="@drawable/tools"
            android:title="@string/it06" />
        <item
            android:id="@+id/it07"
            android:icon="@drawable/blocnote25"
            android:title="@string/it07" />
        </menu>
    </item>

</menu>