<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

         <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:hint="@string/etName">
        </EditText>

        <EditText
            android:id="@+id/etOpis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:hint="@string/etOpis">
        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10sp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/tvType">
        </TextView>

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="10sp"
                android:text="@string/rbP"/>

            <RadioButton
                android:id="@+id/rbZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="10sp"
                android:text="@string/rbZ"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/cbStoim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/cbStoim"
            android:textSize="15sp"
            android:textOff="OFF"
            android:textOn="ON"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/cbPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45sp"
            android:layout_marginRight="10sp"
            android:text="@string/cbPrice"
            android:textSize="15sp"
            android:textOff="OFF"
            android:textOn="ON"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/cbPricends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45sp"
                android:layout_marginRight="10sp"
                android:text="@string/cbPricends"
                android:textSize="15sp"
                android:textOff="OFF"
                android:textOn="ON"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvnds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="75sp"
                    android:textSize="15sp"
                    android:text="@string/etnds">
                </TextView>

                <EditText
                    android:id="@+id/etnds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_marginLeft="15sp">
                </EditText>

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/cbValuta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="10sp"
            android:text="@string/cbValuta"
            android:textSize="15sp"
            android:textOff="OFF"
            android:textOn="ON"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:textSize="5sp">
            </Spinner>
        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/cbKolvo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/cbKolvo"
            android:textSize="15sp"
            android:textOff="OFF"
            android:textOn="ON"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/cbNapom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/cbNapom"
            android:textSize="15sp"
            android:textOff="OFF"
            android:textOn="ON"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/cbSin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/cbSin"
            android:textSize="15sp"
            android:textOff="OFF"
            android:textOn="ON"/>

     </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:textSize="15sp">
        </Button>

    </LinearLayout>

    </LinearLayout>

    </ScrollView >