<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/lightback">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7sp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/acPN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            android:layout_marginBottom="15sp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="10sp"
            android:layout_weight="1.1"
            android:completionThreshold="3"
            android:hint="@string/add_prod" >

        </AutoCompleteTextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7sp"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/acPOpis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3sp"
                android:layout_marginBottom="15sp"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1.1"
                android:completionThreshold="1"
                android:hint="@string/add_opis" >
            </AutoCompleteTextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_marginLeft="10sp"
                android:textSize="15sp"
                android:hint="@string/etCount" >
            </EditText>

            <AutoCompleteTextView
                android:id="@+id/acPE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:textSize="15sp"
                android:hint="@string/acPE" >
            </AutoCompleteTextView>

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="15sp"
                android:hint="@string/etPrice">
            </EditText>

            <CheckBox
                android:id="@+id/chbvagno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity = "left"
                android:layout_marginLeft="7sp"
                android:layout_gravity="center_vertical"
                android:text="@string/chbvagno">
            </CheckBox>

             <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:gravity="right"
                android:orientation="horizontal"
                 android:layout_marginRight="15dp">

                <Button
                    android:id="@+id/btSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="right"
                    android:text=""
                    android:textSize="10sp"
                    android:background="#27c6f4"
                    android:textColor="#ffffff">
                </Button>

            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/lvData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:dividerHeight="0sp"
            android:divider="@android:color/transparent"
            android:layout_weight="1">
        </ListView>

        <LinearLayout
            android:id="@+id/llI"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:orientation="horizontal"
            android:background="@drawable/itoglight">

            <TextView
                android:id="@+id/tvItogtxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="false"
                android:gravity="left"
                android:paddingLeft="10sp"
                android:paddingTop="14sp"
                android:ems="10"
                android:text="@string/tvItogtxt"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="right">

                <TextView
                    android:id="@+id/tvItognds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="11sp"
                    android:textStyle="bold"
                    android:paddingTop="10sp"
                    android:text=""
                    android:textColor="#ffce9f"
                    android:textSize="10sp" >

                </TextView>

                <TextView
                    android:id="@+id/tvI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="11sp"
                    android:textStyle="bold"
                    android:paddingTop="1sp"
                    android:text=" "
                    android:textColor="#333333"
                    android:textSize="10sp" >

                </TextView>

                <TextView
                    android:id="@+id/tvItog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="10sp"
                    android:textStyle="bold"
                    android:paddingTop="0sp"
                    android:text=""
                    android:textColor="#ffffff"
                    android:textSize="20sp" >

                </TextView>



            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_home"
        app:itemIconTint="@color/colorAccent"
        app:itemTextColor="@color/colorPrimaryDark"/>

</android.support.v4.widget.DrawerLayout>